freest/test/prog/Invalid/Typing/ExposeArrow/ExposeArrow.fst
module ExposeArrow where

foo : ()
foo = fork 1